ASN1_parser/grammar/Parser.output
Terminals unused in grammar

   _Number


Grammar

    0 $accept: Grammar $end

    1 Grammar: /* empty */
    2        | _ModuleID _DEFINITIONS GlobalOptions _ASSIGN _BEGIN ModuleList _END
    3        | ModuleList

    4 GlobalOptions: /* empty */
    5              | GlobalOptionList

    6 GlobalOptionList: Opt
    7                 | GlobalOptionList Opt

    8 Opt: GlobalOptSeq
    9    | GlobalOptTags

   10 GlobalOptSeq: _EXTENSIBILITY _IMPLIED

   11 GlobalOptTags: _EXPLICIT _TAG
   12              | _IMPLICIT _TAG
   13              | _AUTOMATIC _TAG

   14 ModuleList: Module
   15           | ModuleList Module

   16 Module: _ModuleID _ASSIGN ModuleDef

   17 $@1: /* empty */

   18 UniqueModule: ModuleTypeSeqSet $@1 _OPENBRACKET VariableListSeqSet _CLOSEBRACKET

   19 $@2: /* empty */

   20 UniqueModule: _CHOICE $@2 _OPENBRACKET VariableList _CLOSEBRACKET

   21 $@3: /* empty */

   22 UniqueModule: _SEQUENCEOF $@3 SeqOfConstraint VariableType

   23 $@4: /* empty */

   24 ModuleDef: ModuleTypeSeqSet $@4 _OPENBRACKET VariableListSeqSet _CLOSEBRACKET

   25 $@5: /* empty */

   26 ModuleDef: _CHOICE $@5 _OPENBRACKET VariableList _CLOSEBRACKET

   27 $@6: /* empty */

   28 ModuleDef: _SEQUENCEOF $@6 SeqOfConstraint VariableType
   29          | ASN1_Type Constraint

   30 SeqOfConstraint: /* empty */

   31 ModuleTypeSeqSet: _SEQUENCE
   32                 | _SET

   33 VariableListSeqSet: /* empty */
   34                   | Variable
   35                   | VariableListSeqSet _COMMA_ Variable
   36                   | VariableListSeqSet _COMMA_ _EXTENSIBILESEQ

   37 VariableList: Variable
   38             | VariableList _COMMA_ Variable

   39 Variable: _VarID TagField VariableType Optional

   40 Optional: /* empty */
   41         | _OPTIONAL

   42 VariableType: ASN1_Type Constraint
   43             | UniqueModule
   44             | _ModuleID

   45 TagField: /* empty */
   46         | _OPENSQBRACKET TagClass _Int _CLOSESQBRACKET Explicit

   47 Explicit: /* empty */
   48         | _EXPLICIT
   49         | _IMPLICIT

   50 TagClass: /* empty */
   51         | _UNIVERSAL
   52         | _APPLICATION
   53         | _CONTEXTSPECIFIC
   54         | _PRIVATE

   55 Constraint: /* empty */

   56 ASN1_Type: _BOOLEAN
   57          | _BITSTRING
   58          | _ENUM
   59          | _IA5STRING
   60          | _INTEGER
   61          | _NULL
   62          | _OBJECTID
   63          | _OCTETSTRING
   64          | _REAL
   65          | _UTF8STRING
   66          | _UTCTIME


Terminals, with rules where they appear

$end (0) 0
error (256)
_Number (258)
_Int (259) 46
_ModuleID (260) 2 16 44
_VarID (261) 39
_BEGIN (262) 2
_END (263) 2
_EXPLICIT (264) 11 48
_IMPLICIT (265) 12 49
_AUTOMATIC (266) 13
_TAG (267) 11 12 13
_EXTENSIBILITY (268) 10
_IMPLIED (269) 10
_DEFINITIONS (270) 2
_UNIVERSAL (271) 51
_APPLICATION (272) 52
_CONTEXTSPECIFIC (273) 53
_PRIVATE (274) 54
_OPTIONAL (275) 41
_SEQUENCE (276) 31
_SET (277) 32
_SEQUENCEOF (278) 22 28
_CHOICE (279) 20 26
_BITSTRING (280) 57
_BOOLEAN (281) 56
_ENUM (282) 58
_IA5STRING (283) 59
_INTEGER (284) 60
_NULL (285) 61
_OBJECTID (286) 62
_OCTETSTRING (287) 63
_REAL (288) 64
_UTCTIME (289) 66
_UTF8STRING (290) 65
_OPENBRACKET (291) 18 20 24 26
_CLOSEBRACKET (292) 18 20 24 26
_COMMA_ (293) 35 36 38
_ASSIGN (294) 2 16
_OPENSQBRACKET (295) 46
_CLOSESQBRACKET (296) 46
_EXTENSIBILESEQ (297) 36


Nonterminals, with rules where they appear

$accept (43)
    on left: 0
Grammar (44)
    on left: 1 2 3, on right: 0
GlobalOptions (45)
    on left: 4 5, on right: 2
GlobalOptionList (46)
    on left: 6 7, on right: 5 7
Opt (47)
    on left: 8 9, on right: 6 7
GlobalOptSeq (48)
    on left: 10, on right: 8
GlobalOptTags (49)
    on left: 11 12 13, on right: 9
ModuleList (50)
    on left: 14 15, on right: 2 3 15
Module (51)
    on left: 16, on right: 14 15
UniqueModule (52)
    on left: 18 20 22, on right: 43
$@1 (53)
    on left: 17, on right: 18
$@2 (54)
    on left: 19, on right: 20
$@3 (55)
    on left: 21, on right: 22
ModuleDef (56)
    on left: 24 26 28 29, on right: 16
$@4 (57)
    on left: 23, on right: 24
$@5 (58)
    on left: 25, on right: 26
$@6 (59)
    on left: 27, on right: 28
SeqOfConstraint (60)
    on left: 30, on right: 22 28
ModuleTypeSeqSet (61)
    on left: 31 32, on right: 18 24
VariableListSeqSet (62)
    on left: 33 34 35 36, on right: 18 24 35 36
VariableList (63)
    on left: 37 38, on right: 20 26 38
Variable (64)
    on left: 39, on right: 34 35 37 38
Optional (65)
    on left: 40 41, on right: 39
VariableType (66)
    on left: 42 43 44, on right: 22 28 39
TagField (67)
    on left: 45 46, on right: 39
Explicit (68)
    on left: 47 48 49, on right: 46
TagClass (69)
    on left: 50 51 52 53 54, on right: 46
Constraint (70)
    on left: 55, on right: 29 42
ASN1_Type (71)
    on left: 56 57 58 59 60 61 62 63 64 65 66, on right: 29 42


State 0

    0 $accept: . Grammar $end

    _ModuleID  shift, and go to state 1

    $default  reduce using rule 1 (Grammar)

    Grammar     go to state 2
    ModuleList  go to state 3
    Module      go to state 4


State 1

    2 Grammar: _ModuleID . _DEFINITIONS GlobalOptions _ASSIGN _BEGIN ModuleList _END
   16 Module: _ModuleID . _ASSIGN ModuleDef

    _DEFINITIONS  shift, and go to state 5
    _ASSIGN       shift, and go to state 6


State 2

    0 $accept: Grammar . $end

    $end  shift, and go to state 7


State 3

    3 Grammar: ModuleList .
   15 ModuleList: ModuleList . Module

    _ModuleID  shift, and go to state 8

    $default  reduce using rule 3 (Grammar)

    Module  go to state 9


State 4

   14 ModuleList: Module .

    $default  reduce using rule 14 (ModuleList)


State 5

    2 Grammar: _ModuleID _DEFINITIONS . GlobalOptions _ASSIGN _BEGIN ModuleList _END

    _EXPLICIT       shift, and go to state 10
    _IMPLICIT       shift, and go to state 11
    _AUTOMATIC      shift, and go to state 12
    _EXTENSIBILITY  shift, and go to state 13

    $default  reduce using rule 4 (GlobalOptions)

    GlobalOptions     go to state 14
    GlobalOptionList  go to state 15
    Opt               go to state 16
    GlobalOptSeq      go to state 17
    GlobalOptTags     go to state 18


State 6

   16 Module: _ModuleID _ASSIGN . ModuleDef

    _SEQUENCE     shift, and go to state 19
    _SET          shift, and go to state 20
    _SEQUENCEOF   shift, and go to state 21
    _CHOICE       shift, and go to state 22
    _BITSTRING    shift, and go to state 23
    _BOOLEAN      shift, and go to state 24
    _ENUM         shift, and go to state 25
    _IA5STRING    shift, and go to state 26
    _INTEGER      shift, and go to state 27
    _NULL         shift, and go to state 28
    _OBJECTID     shift, and go to state 29
    _OCTETSTRING  shift, and go to state 30
    _REAL         shift, and go to state 31
    _UTCTIME      shift, and go to state 32
    _UTF8STRING   shift, and go to state 33

    ModuleDef         go to state 34
    ModuleTypeSeqSet  go to state 35
    ASN1_Type         go to state 36


State 7

    0 $accept: Grammar $end .

    $default  accept


State 8

   16 Module: _ModuleID . _ASSIGN ModuleDef

    _ASSIGN  shift, and go to state 6


State 9

   15 ModuleList: ModuleList Module .

    $default  reduce using rule 15 (ModuleList)


State 10

   11 GlobalOptTags: _EXPLICIT . _TAG

    _TAG  shift, and go to state 37


State 11

   12 GlobalOptTags: _IMPLICIT . _TAG

    _TAG  shift, and go to state 38


State 12

   13 GlobalOptTags: _AUTOMATIC . _TAG

    _TAG  shift, and go to state 39


State 13

   10 GlobalOptSeq: _EXTENSIBILITY . _IMPLIED

    _IMPLIED  shift, and go to state 40


State 14

    2 Grammar: _ModuleID _DEFINITIONS GlobalOptions . _ASSIGN _BEGIN ModuleList _END

    _ASSIGN  shift, and go to state 41


State 15

    5 GlobalOptions: GlobalOptionList .
    7 GlobalOptionList: GlobalOptionList . Opt

    _EXPLICIT       shift, and go to state 10
    _IMPLICIT       shift, and go to state 11
    _AUTOMATIC      shift, and go to state 12
    _EXTENSIBILITY  shift, and go to state 13

    $default  reduce using rule 5 (GlobalOptions)

    Opt            go to state 42
    GlobalOptSeq   go to state 17
    GlobalOptTags  go to state 18


State 16

    6 GlobalOptionList: Opt .

    $default  reduce using rule 6 (GlobalOptionList)


State 17

    8 Opt: GlobalOptSeq .

    $default  reduce using rule 8 (Opt)


State 18

    9 Opt: GlobalOptTags .

    $default  reduce using rule 9 (Opt)


State 19

   31 ModuleTypeSeqSet: _SEQUENCE .

    $default  reduce using rule 31 (ModuleTypeSeqSet)


State 20

   32 ModuleTypeSeqSet: _SET .

    $default  reduce using rule 32 (ModuleTypeSeqSet)


State 21

   28 ModuleDef: _SEQUENCEOF . $@6 SeqOfConstraint VariableType

    $default  reduce using rule 27 ($@6)

    $@6  go to state 43


State 22

   26 ModuleDef: _CHOICE . $@5 _OPENBRACKET VariableList _CLOSEBRACKET

    $default  reduce using rule 25 ($@5)

    $@5  go to state 44


State 23

   57 ASN1_Type: _BITSTRING .

    $default  reduce using rule 57 (ASN1_Type)


State 24

   56 ASN1_Type: _BOOLEAN .

    $default  reduce using rule 56 (ASN1_Type)


State 25

   58 ASN1_Type: _ENUM .

    $default  reduce using rule 58 (ASN1_Type)


State 26

   59 ASN1_Type: _IA5STRING .

    $default  reduce using rule 59 (ASN1_Type)


State 27

   60 ASN1_Type: _INTEGER .

    $default  reduce using rule 60 (ASN1_Type)


State 28

   61 ASN1_Type: _NULL .

    $default  reduce using rule 61 (ASN1_Type)


State 29

   62 ASN1_Type: _OBJECTID .

    $default  reduce using rule 62 (ASN1_Type)


State 30

   63 ASN1_Type: _OCTETSTRING .

    $default  reduce using rule 63 (ASN1_Type)


State 31

   64 ASN1_Type: _REAL .

    $default  reduce using rule 64 (ASN1_Type)


State 32

   66 ASN1_Type: _UTCTIME .

    $default  reduce using rule 66 (ASN1_Type)


State 33

   65 ASN1_Type: _UTF8STRING .

    $default  reduce using rule 65 (ASN1_Type)


State 34

   16 Module: _ModuleID _ASSIGN ModuleDef .

    $default  reduce using rule 16 (Module)


State 35

   24 ModuleDef: ModuleTypeSeqSet . $@4 _OPENBRACKET VariableListSeqSet _CLOSEBRACKET

    $default  reduce using rule 23 ($@4)

    $@4  go to state 45


State 36

   29 ModuleDef: ASN1_Type . Constraint

    $default  reduce using rule 55 (Constraint)

    Constraint  go to state 46


State 37

   11 GlobalOptTags: _EXPLICIT _TAG .

    $default  reduce using rule 11 (GlobalOptTags)


State 38

   12 GlobalOptTags: _IMPLICIT _TAG .

    $default  reduce using rule 12 (GlobalOptTags)


State 39

   13 GlobalOptTags: _AUTOMATIC _TAG .

    $default  reduce using rule 13 (GlobalOptTags)


State 40

   10 GlobalOptSeq: _EXTENSIBILITY _IMPLIED .

    $default  reduce using rule 10 (GlobalOptSeq)


State 41

    2 Grammar: _ModuleID _DEFINITIONS GlobalOptions _ASSIGN . _BEGIN ModuleList _END

    _BEGIN  shift, and go to state 47


State 42

    7 GlobalOptionList: GlobalOptionList Opt .

    $default  reduce using rule 7 (GlobalOptionList)


State 43

   28 ModuleDef: _SEQUENCEOF $@6 . SeqOfConstraint VariableType

    $default  reduce using rule 30 (SeqOfConstraint)

    SeqOfConstraint  go to state 48


State 44

   26 ModuleDef: _CHOICE $@5 . _OPENBRACKET VariableList _CLOSEBRACKET

    _OPENBRACKET  shift, and go to state 49


State 45

   24 ModuleDef: ModuleTypeSeqSet $@4 . _OPENBRACKET VariableListSeqSet _CLOSEBRACKET

    _OPENBRACKET  shift, and go to state 50


State 46

   29 ModuleDef: ASN1_Type Constraint .

    $default  reduce using rule 29 (ModuleDef)


State 47

    2 Grammar: _ModuleID _DEFINITIONS GlobalOptions _ASSIGN _BEGIN . ModuleList _END

    _ModuleID  shift, and go to state 8

    ModuleList  go to state 51
    Module      go to state 4


State 48

   28 ModuleDef: _SEQUENCEOF $@6 SeqOfConstraint . VariableType

    _ModuleID     shift, and go to state 52
    _SEQUENCE     shift, and go to state 19
    _SET          shift, and go to state 20
    _SEQUENCEOF   shift, and go to state 53
    _CHOICE       shift, and go to state 54
    _BITSTRING    shift, and go to state 23
    _BOOLEAN      shift, and go to state 24
    _ENUM         shift, and go to state 25
    _IA5STRING    shift, and go to state 26
    _INTEGER      shift, and go to state 27
    _NULL         shift, and go to state 28
    _OBJECTID     shift, and go to state 29
    _OCTETSTRING  shift, and go to state 30
    _REAL         shift, and go to state 31
    _UTCTIME      shift, and go to state 32
    _UTF8STRING   shift, and go to state 33

    UniqueModule      go to state 55
    ModuleTypeSeqSet  go to state 56
    VariableType      go to state 57
    ASN1_Type         go to state 58


State 49

   26 ModuleDef: _CHOICE $@5 _OPENBRACKET . VariableList _CLOSEBRACKET

    _VarID  shift, and go to state 59

    VariableList  go to state 60
    Variable      go to state 61


State 50

   24 ModuleDef: ModuleTypeSeqSet $@4 _OPENBRACKET . VariableListSeqSet _CLOSEBRACKET

    _VarID  shift, and go to state 59

    $default  reduce using rule 33 (VariableListSeqSet)

    VariableListSeqSet  go to state 62
    Variable            go to state 63


State 51

    2 Grammar: _ModuleID _DEFINITIONS GlobalOptions _ASSIGN _BEGIN ModuleList . _END
   15 ModuleList: ModuleList . Module

    _ModuleID  shift, and go to state 8
    _END       shift, and go to state 64

    Module  go to state 9


State 52

   44 VariableType: _ModuleID .

    $default  reduce using rule 44 (VariableType)


State 53

   22 UniqueModule: _SEQUENCEOF . $@3 SeqOfConstraint VariableType

    $default  reduce using rule 21 ($@3)

    $@3  go to state 65


State 54

   20 UniqueModule: _CHOICE . $@2 _OPENBRACKET VariableList _CLOSEBRACKET

    $default  reduce using rule 19 ($@2)

    $@2  go to state 66


State 55

   43 VariableType: UniqueModule .

    $default  reduce using rule 43 (VariableType)


State 56

   18 UniqueModule: ModuleTypeSeqSet . $@1 _OPENBRACKET VariableListSeqSet _CLOSEBRACKET

    $default  reduce using rule 17 ($@1)

    $@1  go to state 67


State 57

   28 ModuleDef: _SEQUENCEOF $@6 SeqOfConstraint VariableType .

    $default  reduce using rule 28 (ModuleDef)


State 58

   42 VariableType: ASN1_Type . Constraint

    $default  reduce using rule 55 (Constraint)

    Constraint  go to state 68


State 59

   39 Variable: _VarID . TagField VariableType Optional

    _OPENSQBRACKET  shift, and go to state 69

    $default  reduce using rule 45 (TagField)

    TagField  go to state 70


State 60

   26 ModuleDef: _CHOICE $@5 _OPENBRACKET VariableList . _CLOSEBRACKET
   38 VariableList: VariableList . _COMMA_ Variable

    _CLOSEBRACKET  shift, and go to state 71
    _COMMA_        shift, and go to state 72


State 61

   37 VariableList: Variable .

    $default  reduce using rule 37 (VariableList)


State 62

   24 ModuleDef: ModuleTypeSeqSet $@4 _OPENBRACKET VariableListSeqSet . _CLOSEBRACKET
   35 VariableListSeqSet: VariableListSeqSet . _COMMA_ Variable
   36                   | VariableListSeqSet . _COMMA_ _EXTENSIBILESEQ

    _CLOSEBRACKET  shift, and go to state 73
    _COMMA_        shift, and go to state 74


State 63

   34 VariableListSeqSet: Variable .

    $default  reduce using rule 34 (VariableListSeqSet)


State 64

    2 Grammar: _ModuleID _DEFINITIONS GlobalOptions _ASSIGN _BEGIN ModuleList _END .

    $default  reduce using rule 2 (Grammar)


State 65

   22 UniqueModule: _SEQUENCEOF $@3 . SeqOfConstraint VariableType

    $default  reduce using rule 30 (SeqOfConstraint)

    SeqOfConstraint  go to state 75


State 66

   20 UniqueModule: _CHOICE $@2 . _OPENBRACKET VariableList _CLOSEBRACKET

    _OPENBRACKET  shift, and go to state 76


State 67

   18 UniqueModule: ModuleTypeSeqSet $@1 . _OPENBRACKET VariableListSeqSet _CLOSEBRACKET

    _OPENBRACKET  shift, and go to state 77


State 68

   42 VariableType: ASN1_Type Constraint .

    $default  reduce using rule 42 (VariableType)


State 69

   46 TagField: _OPENSQBRACKET . TagClass _Int _CLOSESQBRACKET Explicit

    _UNIVERSAL        shift, and go to state 78
    _APPLICATION      shift, and go to state 79
    _CONTEXTSPECIFIC  shift, and go to state 80
    _PRIVATE          shift, and go to state 81

    $default  reduce using rule 50 (TagClass)

    TagClass  go to state 82


State 70

   39 Variable: _VarID TagField . VariableType Optional

    _ModuleID     shift, and go to state 52
    _SEQUENCE     shift, and go to state 19
    _SET          shift, and go to state 20
    _SEQUENCEOF   shift, and go to state 53
    _CHOICE       shift, and go to state 54
    _BITSTRING    shift, and go to state 23
    _BOOLEAN      shift, and go to state 24
    _ENUM         shift, and go to state 25
    _IA5STRING    shift, and go to state 26
    _INTEGER      shift, and go to state 27
    _NULL         shift, and go to state 28
    _OBJECTID     shift, and go to state 29
    _OCTETSTRING  shift, and go to state 30
    _REAL         shift, and go to state 31
    _UTCTIME      shift, and go to state 32
    _UTF8STRING   shift, and go to state 33

    UniqueModule      go to state 55
    ModuleTypeSeqSet  go to state 56
    VariableType      go to state 83
    ASN1_Type         go to state 58


State 71

   26 ModuleDef: _CHOICE $@5 _OPENBRACKET VariableList _CLOSEBRACKET .

    $default  reduce using rule 26 (ModuleDef)


State 72

   38 VariableList: VariableList _COMMA_ . Variable

    _VarID  shift, and go to state 59

    Variable  go to state 84


State 73

   24 ModuleDef: ModuleTypeSeqSet $@4 _OPENBRACKET VariableListSeqSet _CLOSEBRACKET .

    $default  reduce using rule 24 (ModuleDef)


State 74

   35 VariableListSeqSet: VariableListSeqSet _COMMA_ . Variable
   36                   | VariableListSeqSet _COMMA_ . _EXTENSIBILESEQ

    _VarID           shift, and go to state 59
    _EXTENSIBILESEQ  shift, and go to state 85

    Variable  go to state 86


State 75

   22 UniqueModule: _SEQUENCEOF $@3 SeqOfConstraint . VariableType

    _ModuleID     shift, and go to state 52
    _SEQUENCE     shift, and go to state 19
    _SET          shift, and go to state 20
    _SEQUENCEOF   shift, and go to state 53
    _CHOICE       shift, and go to state 54
    _BITSTRING    shift, and go to state 23
    _BOOLEAN      shift, and go to state 24
    _ENUM         shift, and go to state 25
    _IA5STRING    shift, and go to state 26
    _INTEGER      shift, and go to state 27
    _NULL         shift, and go to state 28
    _OBJECTID     shift, and go to state 29
    _OCTETSTRING  shift, and go to state 30
    _REAL         shift, and go to state 31
    _UTCTIME      shift, and go to state 32
    _UTF8STRING   shift, and go to state 33

    UniqueModule      go to state 55
    ModuleTypeSeqSet  go to state 56
    VariableType      go to state 87
    ASN1_Type         go to state 58


State 76

   20 UniqueModule: _CHOICE $@2 _OPENBRACKET . VariableList _CLOSEBRACKET

    _VarID  shift, and go to state 59

    VariableList  go to state 88
    Variable      go to state 61


State 77

   18 UniqueModule: ModuleTypeSeqSet $@1 _OPENBRACKET . VariableListSeqSet _CLOSEBRACKET

    _VarID  shift, and go to state 59

    $default  reduce using rule 33 (VariableListSeqSet)

    VariableListSeqSet  go to state 89
    Variable            go to state 63


State 78

   51 TagClass: _UNIVERSAL .

    $default  reduce using rule 51 (TagClass)


State 79

   52 TagClass: _APPLICATION .

    $default  reduce using rule 52 (TagClass)


State 80

   53 TagClass: _CONTEXTSPECIFIC .

    $default  reduce using rule 53 (TagClass)


State 81

   54 TagClass: _PRIVATE .

    $default  reduce using rule 54 (TagClass)


State 82

   46 TagField: _OPENSQBRACKET TagClass . _Int _CLOSESQBRACKET Explicit

    _Int  shift, and go to state 90


State 83

   39 Variable: _VarID TagField VariableType . Optional

    _OPTIONAL  shift, and go to state 91

    $default  reduce using rule 40 (Optional)

    Optional  go to state 92


State 84

   38 VariableList: VariableList _COMMA_ Variable .

    $default  reduce using rule 38 (VariableList)


State 85

   36 VariableListSeqSet: VariableListSeqSet _COMMA_ _EXTENSIBILESEQ .

    $default  reduce using rule 36 (VariableListSeqSet)


State 86

   35 VariableListSeqSet: VariableListSeqSet _COMMA_ Variable .

    $default  reduce using rule 35 (VariableListSeqSet)


State 87

   22 UniqueModule: _SEQUENCEOF $@3 SeqOfConstraint VariableType .

    $default  reduce using rule 22 (UniqueModule)


State 88

   20 UniqueModule: _CHOICE $@2 _OPENBRACKET VariableList . _CLOSEBRACKET
   38 VariableList: VariableList . _COMMA_ Variable

    _CLOSEBRACKET  shift, and go to state 93
    _COMMA_        shift, and go to state 72


State 89

   18 UniqueModule: ModuleTypeSeqSet $@1 _OPENBRACKET VariableListSeqSet . _CLOSEBRACKET
   35 VariableListSeqSet: VariableListSeqSet . _COMMA_ Variable
   36                   | VariableListSeqSet . _COMMA_ _EXTENSIBILESEQ

    _CLOSEBRACKET  shift, and go to state 94
    _COMMA_        shift, and go to state 74


State 90

   46 TagField: _OPENSQBRACKET TagClass _Int . _CLOSESQBRACKET Explicit

    _CLOSESQBRACKET  shift, and go to state 95


State 91

   41 Optional: _OPTIONAL .

    $default  reduce using rule 41 (Optional)


State 92

   39 Variable: _VarID TagField VariableType Optional .

    $default  reduce using rule 39 (Variable)


State 93

   20 UniqueModule: _CHOICE $@2 _OPENBRACKET VariableList _CLOSEBRACKET .

    $default  reduce using rule 20 (UniqueModule)


State 94

   18 UniqueModule: ModuleTypeSeqSet $@1 _OPENBRACKET VariableListSeqSet _CLOSEBRACKET .

    $default  reduce using rule 18 (UniqueModule)


State 95

   46 TagField: _OPENSQBRACKET TagClass _Int _CLOSESQBRACKET . Explicit

    _EXPLICIT  shift, and go to state 96
    _IMPLICIT  shift, and go to state 97

    $default  reduce using rule 47 (Explicit)

    Explicit  go to state 98


State 96

   48 Explicit: _EXPLICIT .

    $default  reduce using rule 48 (Explicit)


State 97

   49 Explicit: _IMPLICIT .

    $default  reduce using rule 49 (Explicit)


State 98

   46 TagField: _OPENSQBRACKET TagClass _Int _CLOSESQBRACKET Explicit .

    $default  reduce using rule 46 (TagField)
